syntax = "proto3";

package movies.v1;

// import "google/type/date.proto";
// import "shared/type/pagination/pagination.proto";

option go_package = "bookmymovie.app/bookmymovie/api/gen/movies/v1;moviesv1";

message Language {
  int64 id = 1;
  string display_name = 2;
  string english_name = 3;
  string slug = 4;
}

message GetLanguageRequest {
  int64 id = 1;
}

message GetLanguageResponse {
  Language language = 1;
}

message GetLanguagesRequest {}

message GetLanguagesResponse {
  repeated Language languages = 1;
}

message CreateLanguageRequest {
  string display_name = 1;
  string english_name = 2;
}

message CreateLanguageResponse {
  Language language = 1;
}

message UpdateLanguageRequest {
  int64 id = 1;
  optional string display_name = 2;
  optional string english_name = 3;
}

message UpdateLanguageResponse {
  Language language = 1;
}

message DeleteLanguageRequest {
  int64 id = 1;
}

message DeleteLanguageResponse {}

service MoviesLanguagesService {
  rpc GetLanguage(GetLanguageRequest) returns (GetLanguageResponse);
  rpc GetLanguages(GetLanguagesRequest) returns (GetLanguagesResponse);
  rpc CreateLanguage(CreateLanguageRequest) returns (CreateLanguageResponse);
  rpc UpdateLanguage(UpdateLanguageRequest) returns (UpdateLanguageResponse);
  rpc DeleteLanguage(DeleteLanguageRequest) returns (DeleteLanguageResponse);
}
