syntax = "proto3";

package users.v1;

import "google/type/date/date.proto";
import "google/type/timestamp/timestamp.proto";

option go_package = "bookmymovie.app/bookmymovie/api/gen/users/v1;usersv1";

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_REGULAR_USER = 1;
  ROLE_ADMIN = 2;
}

message GetLoggedInUserRequest {}

message GetLoggedInUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  optional google.type.Date dob = 5;
  int32 version = 6;
  google.protobuf.Timestamp created_at = 7;
}

service UsersService {
  rpc GetLoggedInUser(GetLoggedInUserRequest) returns (GetLoggedInUserResponse);
  // rpc UpdateUserInfo(GetLoggedInUserRequest) returns (GetLoggedInUserResponse);
}
